--- a/index.html
+++ b/index.html
@@ -285,6 +285,9 @@
 
 <section id="talliesTab" class="tab">
   <h3>Fish List</h3>
+  <p style="font-size: 0.9em; margin-top: -10px; margin-bottom: 15px;">
+    Bonus Tip: Tap the name of a fish to see its recommended rig and bait combos!
+  </p>
   <h3>Total Fish Caught: <span id="totalFishCount">0</span></h3>
   <div id="fishList" class="fish-list"></div>
   <button id="clearTallies" class="clear-btn">Clear</button>
