--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 
 <section id="talliesTab" class="tab">
   <h3>Fish List</h3>
-  <p style="font-size: 0.9em; margin-top: -10px; margin-bottom: 15px;">
+  <p style="font-size: 0.9em; margin-top: -10px; margin-bottom: 15px;" text-align: center;">
     Bonus Tip: Tap the name of a fish to see its recommended rig and bait combos!
   </p>
   <h3>Total Fish Caught: <span id="totalFishCount">0</span></h3>
