--- a/index.html
+++ b/index.html
@@ -270,17 +270,23 @@
   <button id="talliesTabBtn">Tallies</button>
 </div>
 
-<section id="memoriesTab" class="tab active">
+<section id="memoriesTab" class="tab active" style="display: flex; flex-direction: column; align-items: center; text-align: center;">
   <input type="file" id="photoInput" class="button" accept="image/*" multiple />
-  
+
   <div style="margin-top: 10px;">
-    <label>Caption: <input type="text" id="captionInput" placeholder="Enter caption here" /></label>
+    <label>
+      Caption:
+      <input type="text" id="captionInput" placeholder="Enter caption here" />
+    </label>
     <br>
-    <label style="margin-left: 20px;">Location: <input type="text" id="locationInput" placeholder="Enter location here" /></label>
+    <label style="margin-left: 20px;">
+      Location:
+      <input type="text" id="locationInput" placeholder="Enter location here" />
+    </label>
     <button id="uploadButton" class="button" style="margin-left: 20px;">Upload Photos</button>
   </div>
-  
-  <div id="photoGallery" aria-live="polite" aria-label="Memories photo feed"></div>
+
+  <div id="photoGallery" aria-live="polite" aria-label="Memories photo feed" style="margin-top: 20px; width: 100%; max-width: 600px;"></div>
 </section>
 
 <section id="talliesTab" class="tab">
