--- a/index.html
+++ b/index.html
@@ -264,9 +264,119 @@
 #memoriesTab.active, #talliesTab.active {
   display: block; /* show active tab */
 }
+
+  /* === Night at the Lake: Dark Mode === */
+body.dark-mode, html.dark-mode {
+  background: #0d1b1e; /* deep night lake blue */
+  color: #cce3dc; /* moonlight mist */
+}
+
+header.dark-mode {
+  background: #0f2f2f;
+  color: #cce3dc;
+  border-bottom: 4px solid #5e3c1f; /* warm ember tone */
+}
+
+.dark-mode #tabs {
+  background: #1a2c2c; /* deeper midnight green */
+}
+
+.dark-mode #tabs button {
+  background: #2c2f2a; /* soft moss */
+  color: #cce3dc;
+}
+
+.dark-mode #tabs button.active {
+  background: #0f2f2f;
+  color: #fefae0;
+}
+
+.dark-mode section {
+  background: #0d1b1e;
+  color: #e0f7fa;
+}
+
+.dark-mode .button {
+  background-color: #5e3c1f; /* warm firewood */
+  color: #fff;
+  box-shadow: inset 0 0 2px #000, 2px 2px 5px rgba(255, 140, 0, 0.4);
+}
+.dark-mode .button:hover {
+  background-color: #7a5233;
+}
+
+.dark-mode .catch-card {
+  background: #1e2b2e; /* soft twilight */
+  border: 1px solid #304f4f;
+  color: #e0f7fa;
+}
+
+.dark-mode .catch-caption,
+.dark-mode .catch-weight {
+  color: #ffddaf; /* soft amber */
+}
+
+.dark-mode .catch-location,
+.dark-mode .catch-date {
+  color: #d5e4e2;
+}
+
+.dark-mode .catch-buttons button {
+  background: #3f2c1f; /* charred wood */
+  color: #fdf7ee;
+}
+.dark-mode .catch-buttons button:hover {
+  background: #553c2a;
+}
+
+.dark-mode .fish-item {
+  background: #263434; /* pondside moss */
+  color: #e0f7fa;
+  border: 1px solid #3a4c4c;
+}
+
+.dark-mode .fish-name {
+  border-color: #888;
+}
+
+.dark-mode .fish-counter button {
+  background: #5e3c1f;
+}
+.dark-mode .fish-counter button:hover {
+  background: #7a5233;
+}
+
+.dark-mode .fish-tips {
+  color: #c0dcdc;
+}
+
+.dark-mode .clear-btn {
+  background: #8b1e1e;
+}
+.dark-mode .clear-btn:hover {
+  background: #aa2a2a;
+}
+
+.dark-mode #imageModal,
+.dark-mode #instagramModal {
+  background: rgba(0, 0, 0, 0.9);
+}
+
+.dark-mode #talliesTab h3 {
+  color: #cce3dc;
+}
+
+  #darkModeToggle {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  z-index: 100;
+}
 </style>
 </head>
 <body>
+
+<button id="darkModeToggle" class="button" style="margin: 1rem;">🌙 Toggle Dark Mode</button>
 
 <header>Fishin' Buddy</header>
 
@@ -723,6 +833,28 @@ function closeModal() {
 
     // Load your photo feed (can be async)
     await renderPhotoPosts();
+
+    // === Dark Mode Initialization ===
+const darkToggle = document.getElementById("darkModeToggle");
+if (darkToggle) {
+  // Apply stored preference
+  const prefersDark = localStorage.getItem("darkMode") === "true";
+  if (prefersDark) {
+    document.body.classList.add("dark-mode");
+    document.documentElement.classList.add("dark-mode");
+  }
+
+  // Toggle listener
+  darkToggle.addEventListener("click", () => {
+    const isDark = document.body.classList.toggle("dark-mode");
+    document.documentElement.classList.toggle("dark-mode", isDark);
+    localStorage.setItem("darkMode", isDark);
+    darkToggle.textContent = isDark ? "☀️ Day Mode" : "🌙 Night Mode";
+  });
+
+  // Set correct initial text
+  darkToggle.textContent = prefersDark ? "☀️ Day Mode" : "🌙 Night Mode";
+}
 
     // Upload button
     const uploadBtn = document.getElementById("uploadButton");
