--- a/index.html
+++ b/index.html
@@ -416,9 +416,8 @@ header.dark-mode {
 </head>
 <body>
 
-<button id="darkModeToggle" class="button" style="margin: 1rem;">🌙 Toggle Dark Mode</button>
-
 <header>Fishin' Buddy</header>
+  <button id="darkModeToggle" class="button" style="margin: 1rem;">🌙 Dark Mode</button>
 
 <div id="tabs">
   <button id="memoriesTabBtn" class="active">Memories</button>
