--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   #tabs {
     display: flex;
     background: #2c4b1b; /* deeper forest green */
+    flex-shrink: 0;
   }
 
   #tabs button {
@@ -300,7 +301,7 @@
 }
 
   #mapContainer {
-  height: 100%;
+  height: 100vh;
   min-height: 400px;
   width: 100%;
   border-radius: 8px;
